# coral-gate

./: Cargo.toml  README.md  kubeconfig
src/: command.rs  core.rs  error.rs  main.rs  shared.rs
src/command/: generate.rs  setup.rs  structure.rs
src/core/: client.rs  config.rs  csr.rs  profile.rs
