[package]
name = "coralgate"
version = "0.1.0"
edition = "2024"

[dependencies]
rcgen = { version = "0.14.7", features = ["aws_lc_rs", "pem"] }
kube = { version = "3.0.1", features = [
    "runtime",
    "client",
    "rustls-tls",
    "config",
] }
k8s-openapi = { version = "0.27.0", features = ["v1_31"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4.5.60", features = ["derive"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
chrono = "0.4.43"
async-trait = "0.1.89"
base64 = "0.22.1"

[lints.rust]
unused_variables = "allow"
#unused_mut = "allow"
dead_code = "allow"
#unused_imports = "allow"
